Load empty models into Vsum